--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@heybrostudio/utils",
-	"version": "0.0.1",
+	"version": "0.0.2",
 	"type": "module",
 	"description": "Opinionated collection of commonly used JavaScript/TypeScript utilities by @heybrostudio",
 	"author": {
@@ -16,7 +16,10 @@
 	"bugs": {
 		"url": "https://github.com/heybrostudio/utils/issues"
 	},
-	"keywords": ["heybrostudio", "utils"],
+	"keywords": [
+		"heybrostudio",
+		"utils"
+	],
 	"sideEffects": false,
 	"exports": {
 		".": {
@@ -28,7 +31,9 @@
 	"main": "dist/index.cjs",
 	"module": "dist/index.js",
 	"types": "dist/index.d.ts",
-	"files": ["dist"],
+	"files": [
+		"dist"
+	],
 	"scripts": {
 		"dev": "bun --watch examples/index.ts",
 		"build": "bun run typecheck && tsup",
