--- a/package.json
+++ b/package.json
@@ -1,70 +1,65 @@
 {
-  "name": "@heybrostudio/utils",
-  "version": "0.0.9",
-  "type": "module",
-  "description": "Opinionated collection of commonly used JavaScript/TypeScript utilities by @heybrostudio",
-  "author": {
-    "name": "Caven",
-    "email": "cavenasdev@gmail.com"
-  },
-  "license": "MIT",
-  "homepage": "https://github.com/heybrostudio/utils#readme",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/heybrostudio/utils.git"
-  },
-  "bugs": {
-    "url": "https://github.com/heybrostudio/utils/issues"
-  },
-  "keywords": [
-    "heybrostudio",
-    "utils"
-  ],
-  "sideEffects": false,
-  "exports": {
-    ".": {
-      "import": "./dist/index.js",
-      "require": "./dist/index.cjs",
-      "types": "./dist/index.d.ts"
-    }
-  },
-  "main": "dist/index.cjs",
-  "module": "dist/index.js",
-  "types": "dist/index.d.ts",
-  "files": [
-    "dist"
-  ],
-  "scripts": {
-    "dev": "bun --watch examples/index.ts",
-    "build": "bun run typecheck && tsup",
-    "test": "bun test",
-    "format": "biome format . --write",
-    "lint": "biome lint .",
-    "lint:fix": "biome lint . --apply",
-    "typecheck": "tsc --noEmit",
-    "release": "bumpp --commit --push --tag && npm publish --access public",
-    "up": "taze major -I",
-    "prepublishOnly": "bun run build",
-    "postinstall": "bunx simple-git-hooks"
-  },
-  "devDependencies": {
-    "@biomejs/biome": "^1.6.4",
-    "@happy-dom/global-registrator": "^14.7.1",
-    "@heybrostudio/biome-config": "^0.0.6",
-    "@types/bun": "latest",
-    "bumpp": "^9.4.0",
-    "lint-staged": "^15.2.2",
-    "simple-git-hooks": "^2.11.1",
-    "taze": "^0.13.3",
-    "tsup": "^8.0.2"
-  },
-  "peerDependencies": {
-    "typescript": "^5.4.3"
-  },
-  "simple-git-hooks": {
-    "pre-commit": "bun lint-staged"
-  },
-  "lint-staged": {
-    "*": "biome lint . --apply"
-  }
+	"name": "@heybrostudio/utils",
+	"version": "0.0.9",
+	"type": "module",
+	"description": "Opinionated collection of commonly used JavaScript/TypeScript utilities by @heybrostudio",
+	"author": {
+		"name": "Caven",
+		"email": "cavenasdev@gmail.com"
+	},
+	"license": "MIT",
+	"homepage": "https://github.com/heybrostudio/utils#readme",
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/heybrostudio/utils.git"
+	},
+	"bugs": {
+		"url": "https://github.com/heybrostudio/utils/issues"
+	},
+	"keywords": ["heybrostudio", "utils"],
+	"sideEffects": false,
+	"exports": {
+		".": {
+			"import": "./dist/index.js",
+			"require": "./dist/index.cjs",
+			"types": "./dist/index.d.ts"
+		}
+	},
+	"main": "dist/index.cjs",
+	"module": "dist/index.js",
+	"types": "dist/index.d.ts",
+	"files": ["dist"],
+	"scripts": {
+		"dev": "bun --watch examples/index.ts",
+		"build": "bun run typecheck && tsup",
+		"test": "bun test",
+		"format": "biome format . --write",
+		"lint": "biome lint .",
+		"lint:fix": "biome lint . --apply",
+		"typecheck": "tsc --noEmit",
+		"release": "bun run typecheck && bun run lint && bumpp --commit --push --tag && npm publish --access public",
+		"up": "taze major -I",
+		"prepublishOnly": "bun run build",
+		"postinstall": "bunx simple-git-hooks"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "^1.6.4",
+		"@happy-dom/global-registrator": "^14.7.1",
+		"@heybrostudio/biome-config": "^0.0.6",
+		"@types/bun": "latest",
+		"bumpp": "^9.4.0",
+		"lint-staged": "^15.2.2",
+		"simple-git-hooks": "^2.11.1",
+		"taze": "^0.13.3",
+		"tsup": "^8.0.2"
+	},
+	"peerDependencies": {
+		"typescript": "^5.4.3"
+	},
+	"simple-git-hooks": {
+		"pre-commit": "bun lint-staged"
+	},
+	"lint-staged": {
+		"*": "biome lint . --apply"
+	}
 }
